task yerine yetirildi

--- a/Task1/index.html
+++ b/Task1/index.html
@@ -25,10 +25,10 @@
                     </svg>
                 </div>
                 <div class="h1p mx-5">
-                    <h1>
+                    <h1 class="h1element">
                         Sign up
                     </h1>
-                    <p>
+                    <p class="pelement">
                         His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table.
                     </p>
                 </div>
@@ -62,14 +62,41 @@
                 <hr class="mx-5 mt-4">
                 <div class="foot mt-4 mx-5">
                     <p>
-                        By signing up you agree to Directory's <a href="#">Terms and Conditions</a> and <a href="#">Privacy Policy.</a>
+                        By signing up you agree to Directory's <a href="#" class="aelement">Terms and Conditions</a> and <a href="#" class="aaelement">Privacy Policy.</a>
                     </p>
                 </div>
             </div> 
            </div>
            <div class="col-md-7 backgroundC">
+            <div class="toast toast1" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                  <strong class="me-auto natiff"><p>Notification</p></strong>
+                </div>
+                <div class="toast-body toastbody">
+                    Congratulations!
+                </div>
+              </div>
             <div class="setting fixx">
                 <i class="fa-solid fa-gear"></i>
+            </div>
+            <div class="about">
+                <h1>SELECT THEME COLOUR</h1>
+                <form class="formS">
+                    <select id="selection" name="selection" class="select">
+                        <option value="selectcolorvariant">select colour variant</option>
+                        <option value="blue">blue</option>
+                        <option value="pink">pink</option>
+                        <option value="green">green</option>
+                        <option value="red">red</option>
+                        <option value="violet">violet</option>
+                        <option value="sea">sea</option>
+                    </select>
+                </form>
+                <p>
+                    Stylesheet switching in this demo is done with JavaScript and can cause a blink while page loads. This will not happen in your production code.
+                </p>
+            
+                
             </div>
            </div>
         </div>
